--- a/components/Logo/Logo.module.css
+++ b/components/Logo/Logo.module.css
@@ -1,4 +1,4 @@
-.logo {
+.logo-container {
   display: flex;
   font-size: var(--size-lg);
   font-weight: 700;
@@ -6,12 +6,12 @@
   place-items: center;
 }
 
-.mark {
-  width: 1.35em;
-  height: 1.35em;
-  margin-right: 0.35em;
+.logo-img {
+  width: 2.5rem;
+  height: 2.5rem;
+  margin-right: 0.5rem;
 }
 
-.wordmark {
+.logo-text {
   white-space: nowrap;
 }
